--- a/g/ge/gen/genecopoeia.com.html
+++ b/g/ge/gen/genecopoeia.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the genecopoeia.com privacy policy that was archived on 2001-12-01.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20011201053259id_/http%3A//www.genecopoeia.com/privacy.php3) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the genecopoeia.com privacy policy that was archived on 2002-06-05.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20020605034332id_/http%3A//www.genecopoeia.com/privacy.php) for the most accurate reproduction.-->
 
 <html><head>
 <title>
@@ -16,10 +16,19 @@ A:link {
         TEXT-DECORATION: none
 }
 A:visited {
-        TEXT-DECORATION: none;color:#800080
+        TEXT-DECORATION: none
 }
 A:hover {
-        TEXT-DECORATION:underline;color:#66CCFF
+        TEXT-DECORATION:underline;color:#ff8000
+}
+A.search:link {
+        TEXT-DECORATION: none
+}
+A.search:visited {
+         TEXT-DECORATION: none;color:#800080
+}
+A.search:hover {
+         TEXT-DECORATION:underline;color:#ff8000
 }
 </style>
 <link href="/inc/menu.css" rel="stylesheet" type="text/css">
@@ -28,7 +37,7 @@ A:hover {
 <body bgcolor="#FFFFFF" text="#000000" link="#005b88" vlink="#005b88" alink="#005b88" marginheight="0" topmargin="0" onload="init(); MM_preloadImages('/images/company_on.gif','/images/tech_on.gif','/images/product_on.gif','/images/support_on.gif')">
 <script language="javascript" src="/inc/nav.js" type="text/javascript"></script>
 <table width="705" border="0" cellpadding="0" cellspacing="0">
-   <tbody><tr><td width="100%" height="10" align="right" colspan="2"><font face="Arial" style="font-size : 10pt"><a href="/order.php3">How to order</a> | <a href="/contact.php3">Contact us</a></font></td></tr>
+   <tbody><tr><td width="100%" height="10" align="right" colspan="2"><font face="Arial" style="font-size : 10pt"><a href="/order.php">How to order</a> | <a href="/contact.php">Contact us</a></font></td></tr>
   <tr>
     <td width="220" height="48" valign="top"><a href="/"><img border="0" src="/images/gclogo1.gif" width="220" height="48"></a></td>
     <td width="485" valign="top"><img src="/images/topban2.jpg" width="485" height="55"></td>
@@ -36,15 +45,15 @@ A:hover {
     <table border="0" cellpadding="0" cellspacing="0">
         <tbody>
         <tr>
-         <td><a href="/company.php3" onmouseout="startTime(); MM_swapImgRestore();" onmouseover="MM_swapImage('about2','','/images/company_off.gif',1); hideAll(); showLayer('about'); stopTime()"><img alt="About GeneCopoeia" border="0" height="20" width="90" name="about2" src="/images/company_on.gif"></a></td>
+         <td><a href="/company.php" onmouseout="startTime(); MM_swapImgRestore();" onmouseover="MM_swapImage('about2','','/images/company_off.gif',1); hideAll(); showLayer('about'); stopTime()"><img alt="About GeneCopoeia" border="0" height="20" width="90" name="about2" src="/images/company_on.gif"></a></td>
           <td width="1"></td>
-          <td><a href="/tech.php3" onmouseout="startTime(); MM_swapImgRestore();" onmouseover="MM_swapImage('solutions2','','/images/tech_off.gif',1); hideAll(); showLayer('solutions'); stopTime()"><img alt="Technology" border="0" height="20" name="solutions2" src="/images/tech_on.gif" width="110"></a></td>
+          <td><a href="/tech.php" onmouseout="startTime(); MM_swapImgRestore();" onmouseover="MM_swapImage('solutions2','','/images/tech_off.gif',1); hideAll(); showLayer('solutions'); stopTime()"><img alt="Technology" border="0" height="20" name="solutions2" src="/images/tech_on.gif" width="110"></a></td>
             <td width="1"></td>
-          <td><a href="/search.php3" onmouseout="startTime(); MM_swapImgRestore();" onmouseover="MM_swapImage('products2','','/images/product_off.gif',1); hideAll(); showLayer('products'); stopTime()"><img alt="Products &amp; Services" border="0" height="20" name="products2" src="/images/product_on.gif" width="90"></a></td>
+          <td><a href="/search.php" onmouseout="startTime(); MM_swapImgRestore();" onmouseover="MM_swapImage('products2','','/images/product_off.gif',1); hideAll(); showLayer('products'); stopTime()"><img alt="Products &amp; Services" border="0" height="20" name="products2" src="/images/product_on.gif" width="90"></a></td>
           <td width="1"></td>
           <td><a href="/support/" onmouseout="startTime(); MM_swapImgRestore();" onmouseover="MM_swapImage('customer2','','/images/support_off.gif',1); hideAll(); stopTime()"><img alt="Support" border="0" height="20" name="customer2" src="/images/support_on.gif" width="90"></a></td>
           <td width="1"></td>
-          <td><a href="/help.php3" onmouseout="startTime(); MM_swapImgRestore();" onmouseover="MM_swapImage('customer3','','/images/help_off.gif',1); hideAll(); showLayer('customer'); stopTime()"><img alt="Help" border="0" height="20" name="customer3" src="/images/help_on.gif" width="90"></a></td>
+          <td><a href="/help.php" onmouseout="startTime(); MM_swapImgRestore();" onmouseover="MM_swapImage('customer3','','/images/help_off.gif',1); hideAll(); showLayer('customer'); stopTime()"><img alt="Help" border="0" height="20" name="customer3" src="/images/help_on.gif" width="90"></a></td>
           <td width="1"></td>
           <td width="230" bgcolor="#005b88">&nbsp;</td>
           </tr></tbody></table>
@@ -52,20 +61,21 @@ A:hover {
 
 <div id="about">
 <p class="nav">
-<a href="/company.php3" onmouseout="startTime()" onmouseover="stopTime()">&nbsp;&nbsp;Profile&nbsp;</a><br>
-<a href="/contact.php3" onmouseout="startTime()" onmouseover="stopTime()">&nbsp;&nbsp;Contact us&nbsp;</a></p>
+<a href="/company.php" onmouseout="startTime()" onmouseover="stopTime()">&nbsp;&nbsp;Profile&nbsp;</a><br>
+<a href="/contact.php" onmouseout="startTime()" onmouseover="stopTime()">&nbsp;&nbsp;Contact us&nbsp;</a></p>
 </div>
 
 <div id="solutions">
-<p class="nav"><a href="/tech.php3" onmouseout="startTime()" onmouseover="stopTime()">&nbsp;&nbsp;Technology Overview&nbsp;</a><br><a href="/support/faq.php3" onmouseout="startTime()" onmouseover="stopTime()">&nbsp;&nbsp;FAQ&nbsp;</a></p></div>
+<p class="nav"><a href="/tech.php" onmouseout="startTime()" onmouseover="stopTime()">&nbsp;&nbsp;Technology Overview&nbsp;</a><br><a href="/support/faq.php" onmouseout="startTime()" onmouseover="stopTime()">&nbsp;&nbsp;FAQ&nbsp;</a></p></div>
 <div id="products">
-<p class="nav"><a href="/search.php3" onmouseout="startTime()" onmouseover="stopTime()">&nbsp;&nbsp;ORF<i>EXPRESS</i>™&nbsp;</a><br><a href="/search_p.php3" onmouseout="startTime()" onmouseover="stopTime()">&nbsp;&nbsp;ORF<i>EXPRESS</i>™-Primer pair&nbsp;</a></p></div>
+<p class="nav"><a href="/search.php" onmouseout="startTime()" onmouseover="stopTime()">&nbsp;&nbsp;ORF<i>EXPRESS</i>™&nbsp;</a><br><a href="/search_p.php" onmouseout="startTime()" onmouseover="stopTime()">&nbsp;&nbsp;ORF<i>EXPRESS</i>™-Primer pair&nbsp;</a></p></div>
 <div id="customer">
-<p class="nav"><a href="/help.php3" onmouseout="startTime()" onmouseover="stopTime()">&nbsp;&nbsp;Search Help&nbsp;</a><br><a href="/order.php3" onmouseout="startTime()" onmouseover="stopTime()">&nbsp;&nbsp;How to order&nbsp;</a></p></div>
+<p class="nav"><a href="/help.php" onmouseout="startTime()" onmouseover="stopTime()">&nbsp;&nbsp;Search Help&nbsp;</a><br><a href="/order.php" onmouseout="startTime()" onmouseover="stopTime()">&nbsp;&nbsp;How to order&nbsp;</a></p></div>
 <table width="705" border="0" cellpadding="0" cellspacing="0">
 <tbody><tr>
 <td height="20"></td></tr>
-</tbody></table><table width="705" border="0" cellpadding="0" cellspacing="0">
+</tbody></table>
+<table width="705" border="0" cellpadding="0" cellspacing="0">
   <tbody><tr>
     <td width="13" valign="top" rowspan="2">&nbsp;</td>
     <td valign="top" colspan="2">
@@ -75,32 +85,31 @@ A:hover {
   <tr>
     <td width="646" height="500" valign="top">
       <pre>Personal information
-At Genecopoeia,  we intend to give  you as much control  as
-possible over your personal information.  In general, you can visit  Genecopoeia
-on the Web  without telling us  who you are  or revealing any  information about
-yourself. There are times, however, when we may need information from you,  such
-as your name  and address. It  is our intent  to let you  know before we collect
-personal information from you on the Internet. We do keep track of  the
-domains  from  which  people visit  us.  We  analyze this  data  for  trends and
+At Genecopoeia,  we intend to give   you as much control  as possible  over your
+personal  information.   In  general,  you can  visit   Genecopoeia  on  the Web
+without telling us  who you  are  or revealing any  information  about yourself.
+There are times, however, when we  may need information from you,  such  as your
+name   and address.  It  is  our intent   to let  you  know  before we  collect
+personal information from you on the Internet. We do keep track of  the  domains
+from   which   people  visit   us.  We   analyze  this   data   for  trends  and
 statistics, and then we discard it. We have implemented these practices for  the
 Genecopoeia  Web  site.
 
 Information security and quality
-We intend to protect the quality and  integrity
-of your  personally identifiable  information. We  have implemented  appropriate
-technical and managerial  procedures to maintain  information that is  accurate,
-current, and complete. We will make a sincere effort to respond to your requests
-to correct personal information inaccuracies in a timely manner.
+We intend to protect the quality and  integrity of your  personally identifiable
+information.  We   have   implemented   appropriate  technical   and  managerial
+procedures to maintain  information that is  accurate, current, and complete. We
+will make  a sincere  effort to  respond to  your requests  to correct  personal
+information inaccuracies in a timely manner.
 
 Business relationships
-The Genecopoeia site  contains links to other Web  sites.
-Genecopoeia is not responsible for the privacy practices or the content of  such
-Web sites.
+The Genecopoeia  site  contains  links to  other Web   sites. Genecopoeia is not
+responsible for the privacy practices or the content of  such Web sites.
 
 Cookies
-There is a technology called "cookies" which can be used to provide  you
-with tailored information from a Web site. A cookie is an element of data that a
-Web site can send to your browser, which may then store it on your system.  Some
+There is a technology  called "cookies" which can  be used to provide   you with
+tailored information from a Web site. A cookie is an element of data that a  Web
+site can send  to your browser,  which may then  store it on  your system.  Some
 Genecopoeia pages use cookies so that we can better serve you when you return to
 our site.  You can  set your  browser to  notify you  when you receive a cookie,
 giving you the chance to decide whether to accept it.
@@ -110,24 +119,48 @@ contact our <a href="mailto:wmaster@Genecopoeia.com">Webmaster</a>.
     </td>
     <td width="46"></td>
   </tr>
-</tbody></table><table border="0" width="705" cellspacing="0" cellpadding="0">
-  <tbody><tr>
-    <td width="100%" colspan="2">
-      <hr color="#0000FF" size="1">
-    </td>
-  </tr>
-  <tr>
-    <td width="50%"><font face="Arial" style="font-size : 8pt">Copyright© 2001 GeneCopoeia,&nbsp;
-      Inc. All Rights Reserved. </font></td>
-    <td width="50%">
-      <p align="right"><font face="Arial" style="font-size : 8pt"><a href="/contact.php3">Contact
-        us</a> | <a href="/privacy.php3">Privacy Statement</a> </font>
-    </p></td>
-  </tr>
-  <tr>
-    <td width="100%" colspan="2"></td>
-  </tr>
 </tbody></table>
+<table border="0" width="705" cellspacing="0" cellpadding="0">
+
+  <tbody><tr>
+
+    <td width="100%" colspan="2">
+
+      <hr color="#0000FF" size="1">
+
+    </td>
+
+  </tr>
+
+  <tr>
+
+    <td width="50%"><font face="Arial" style="font-size : 8pt">Copyright© 2001-2002 GeneCopoeia,&nbsp;
+
+      Inc. All Rights Reserved. </font></td>
+
+    <td width="50%">
+
+      <p align="right"><font face="Arial" style="font-size : 8pt"><a href="/contact.php">Contact
+
+        us</a> | <a href="/privacy.php">Privacy Statement</a> </font>
+
+    </p></td>
+
+  </tr>
+
+  <tr>
+
+    <td width="100%" colspan="2"></td>
+
+  </tr>
+
+</tbody></table>
+
+
+
+
+
+
 
 
 
