--- a/g/ge/get/getmytime.com.html
+++ b/g/ge/get/getmytime.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the getmytime.com privacy policy that was archived on 2001-12-05.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20011205101119id_/http%3A//getmytime.com/privacy.asp) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the getmytime.com privacy policy that was archived on 2002-06-05.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20020605075510id_/http%3A//getmytime.com/privacy.asp) for the most accurate reproduction.-->
 
 <html><head>
 <title>Web Based Time Management Quickbooks Timer, GetMyTime.com _ Privacy Statement</title>
@@ -31,7 +31,7 @@
  
 <table width="100%" border="0" cellspacing="0" cellpadding="0">
   <tbody><tr> 
-    <td valign="top" background="/images/leftbkgd.gif" bgcolor="#99CC94"><img src="/images/nav.gif" width="191" height="188" usemap="#Navigation" border="0" href="/trial.asp" alt="Navigation Image Map"><map name="Navigation"><area shape="rect" coords="0,22,189,50" href="https://GetMyTime.com/Admin/ChooseUploadFile.asp" alt="New Company Sign Up" title="New Company Sign Up"><area shape="rect" coords="1,56,190,82" href="/demo/demo.asp" alt="Get My Time Demo" title="Get My Time Demo"><area shape="rect" coords="-1,89,189,115" href="/pricing.asp" alt="Pricing, Terms and Conditions" title="Pricing, Terms and Conditions"><area shape="rect" coords="1,122,189,150" href="/support.asp" alt="Technical Support" title="Technical Support"><area shape="rect" coords="-1,155,189,183" href="/privacy.asp" alt="Privacy Statement" title="Privacy Statement"><area shape="rect" coords="2,188,190,214" href="/privacy.asp" alt="Privacy Statement" title="Privacy Statement"></map><br>
+    <td valign="top" background="/images/leftbkgd.gif" bgcolor="#99CC94"><img src="/images/nav.gif" width="191" height="188" usemap="#Navigation" border="0" href="/trial.asp" alt="Navigation Image Map"><map name="Navigation"><area shape="rect" coords="0,22,189,50" href="http://GetMyTime.com/Admin/ChooseUploadFile.asp" alt="New Company Sign Up" title="New Company Sign Up"><area shape="rect" coords="1,56,190,82" href="/demo/demo.asp" alt="Get My Time Demo" title="Get My Time Demo"><area shape="rect" coords="-1,89,189,115" href="/pricing.asp" alt="Pricing, Terms and Conditions" title="Pricing, Terms and Conditions"><area shape="rect" coords="1,122,189,150" href="/support.asp" alt="Technical Support" title="Technical Support"><area shape="rect" coords="-1,155,189,183" href="/privacy.asp" alt="Privacy Statement" title="Privacy Statement"><area shape="rect" coords="2,188,190,214" href="/privacy.asp" alt="Privacy Statement" title="Privacy Statement"></map><br>
       <img src="/images/transparent.gif" width="191" height="180"> </td>
     <td><img src="/images/transparent.gif" width="18" height="18" alt=" "></td>
     <td width="99%" valign="top"> 
@@ -155,11 +155,10 @@
 <p align="center" class="small10">Only compatible with QB Pro for Windows. To 
   request compatability with other software, <a href="/suggestions.asp">click 
   here</a>.<br>
-  <a href="/Admin/TimeManagement.asp">Home</a> | <a href="https://GetMyTime.com/Admin/ChooseUploadFile.asp">Sign 
+  <a href="/Admin/TimeManagement.asp">Home</a> | <a href="http://GetMyTime.com/Admin/ChooseUploadFile.asp">Sign 
   up your Company</a> | <a href="/pricing.asp">Pricing, Terms &amp; Conditions</a> 
   | <a href="/demo/demo.asp">Get My Time Demo<br>
-  </a> <a href="/support.asp">Support &amp; Contact</a> | <a href="/privacy.asp">Privacy 
-  Statement</a> <br>
+  </a> <a href="/support.asp">Support &amp; Contact</a> | <a href="/privacy.asp">Privacy Statement</a>  | <a href="/FAQ.asp">FAQ</a> <br>
   <a href="http://www.netlogix.net"><img src="/images/netlogix.gif" width="102" height="36" border="0" alt="Site design and consultation by netlogix"></a> 
 </p>
 
