--- a/m/ma/mar/marineengine.com.html
+++ b/m/ma/mar/marineengine.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the marineengine.com privacy policy that was archived on 2001-10-21.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20011021070013id_/http%3A//marineengine.com/cgi-bin/suite/classifieds/classifieds.cgi%3Frequest%3Dprivacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the marineengine.com privacy policy that was archived on 2002-06-05.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20020605185150id_/http%3A//marineengine.com/cgi-bin/suite/classifieds/classifieds.cgi%3Frequest%3Dprivacy) for the most accurate reproduction.-->
 
 <html><head>
 <title>MarineEngine.com</title>
@@ -85,43 +85,51 @@
 <table width="600" cellpadding="3" cellspacing="1" border="0">
 <tbody><tr>
 <td bgcolor="#000099" width="13%" onmouseover="mOvr(this,'#800080');" onmouseout="mOut(this,'#000099');"><font face="Arial, Helvetica" size="2"><b><center>
-<a style="color: #FFFFFF; text-decoration: none" href="http://www.marineengine.com/cgi-bin/suite/classifieds/classifieds.cgi?request=new&amp;session=3bd2727fec9b61ba"><font color="white">post ad</font></a>
+<a style="color: #FFFFFF; text-decoration: none" href="http://www.marineengine.com/cgi-bin/suite/classifieds/classifieds.cgi?request=new&amp;session=3cfe5dc702e248db"><font color="white">post ad</font></a>
 </center></b></font></td>
 <td bgcolor="#000099" width="20%" onmouseover="mOvr(this,'#800080');" onmouseout="mOut(this,'#000099');"><font face="Arial, Helvetica" size="2"><b><center>
-<a style="color: #FFFFFF; text-decoration: none" href="http://www.marineengine.com/cgi-bin/suite/classifieds/classifieds.cgi?request=ad_maintenance&amp;session=3bd2727fec9b61ba"><font color="White">ad maintenance</font></a><font color="White">
+<a style="color: #FFFFFF; text-decoration: none" href="http://www.marineengine.com/cgi-bin/suite/classifieds/classifieds.cgi?request=ad_maintenance&amp;session=3cfe5dc702e248db"><font color="White">ad maintenance</font></a><font color="White">
 </font></center></b></font></td>
 <td bgcolor="#000099" width="15%" onmouseover="mOvr(this,'#800080');" onmouseout="mOut(this,'#000099');"><font face="Arial, Helvetica" size="2"><b><center>
-<a style="color: #FFFFFF; text-decoration: none" href="http://www.marineengine.com/cgi-bin/suite/classifieds/classifieds.cgi?request=modify_profile&amp;session=3bd2727fec9b61ba"><font color="white">my profile</font></a>
+<a style="color: #FFFFFF; text-decoration: none" href="http://www.marineengine.com/cgi-bin/suite/classifieds/classifieds.cgi?request=modify_profile&amp;session=3cfe5dc702e248db"><font color="white">my profile</font></a>
 </center></b></font></td>
 <td bgcolor="#000099" width="17%" onmouseover="mOvr(this,'#800080');" onmouseout="mOut(this,'#000099');"><font face="Arial, Helvetica" size="2"><b><center>
-<a style="color: #FFFFFF; text-decoration: none" href="http://www.marineengine.com/cgi-bin/suite/classifieds/classifieds.cgi?request=view_quicklinks&amp;session=3bd2727fec9b61ba"><font color="white">my quicklinks</font></a>
+<a style="color: #FFFFFF; text-decoration: none" href="http://www.marineengine.com/cgi-bin/suite/classifieds/classifieds.cgi?request=view_quicklinks&amp;session=3cfe5dc702e248db"><font color="white">my quicklinks</font></a>
 </center></b></font></td>
 <td bgcolor="#000099" width="15%" onmouseover="mOvr(this,'#800080');" onmouseout="mOut(this,'#000099');"><font face="Arial, Helvetica" size="2"><b><center>
-<a style="color: #FFFFFF; text-decoration: none" href="http://www.marineengine.com/cgi-bin/suite/classifieds/classifieds.cgi?request=display_my_autonotify&amp;session=3bd2727fec9b61ba"><font color="white">auto notify</font></a>
+<a style="color: #FFFFFF; text-decoration: none" href="http://www.marineengine.com/cgi-bin/suite/classifieds/classifieds.cgi?request=display_my_autonotify&amp;session=3cfe5dc702e248db"><font color="white">auto notify</font></a>
 </center></b></font></td>
 <td bgcolor="#000099" width="10%" onmouseover="mOvr(this,'#800080');" onmouseout="mOut(this,'#000099');"><font face="Arial, Helvetica" size="2"><b><center>
-<a style="color: #FFFFFF; text-decoration: none" href="http://www.marineengine.com/cgi-bin/suite/classifieds/classifieds.cgi?request=help&amp;session=3bd2727fec9b61ba"><font color="white">help</font></a>
+<a style="color: #FFFFFF; text-decoration: none" href="http://www.marineengine.com/cgi-bin/suite/classifieds/classifieds.cgi?request=help&amp;session=3cfe5dc702e248db"><font color="white">help</font></a>
 </center></b></font></td>
 <td bgcolor="#000099" width="10%" onmouseover="mOvr(this,'#800080');" onmouseout="mOut(this,'#000099');"><font face="Arial, Helvetica" size="2"><b><center>
-<a style="color: #FFFFFF; text-decoration: none" href="http://www.marineengine.com/cgi-bin/suite/classifieds/classifieds.cgi?action=&amp;session=3bd2727fec9b61ba"><font color="white">main</font></a>
+<a style="color: #FFFFFF; text-decoration: none" href="http://www.marineengine.com/cgi-bin/suite/classifieds/classifieds.cgi?action=&amp;session=3cfe5dc702e248db"><font color="white">main</font></a>
 </center></b></font></td>
 </tr>
 
 <tr>
 <td colspan="7">
 <font face="Arial, Helvetica, sans-serif" size="1">View ads posted in ALL categories 
-the last: <a href="http://www.marineengine.com/cgi-bin/suite/classifieds/classifieds.cgi?&#10;request=advanced_search&amp;website=default&amp;page=0&amp;set=1&amp;keywords=2000+2001&amp;crit&#10;eria=any&amp;location=0&amp;category=0&amp;requirephoto=&amp;days=7&amp;session=3bd2727fec9b61ba"> 1 week</a> 
-| <a href="http://www.marineengine.com/cgi-bin/suite/classifieds/classifieds.cgi?request=advanced_search&amp;website=default&amp;page=0&amp;set=1&amp;keywords=2000+2001&amp;criteria=any&amp;location=0&amp;category=0&amp;requirephoto=&amp;days=14&amp;session=3bd2727fec9b61ba">2 
-weeks</a> | <a href="http://www.marineengine.com/cgi-bin/suite/classifieds/classifieds.cgi?&#10;request=advanced_search&amp;website=default&amp;page=0&amp;set=1&amp;keywords=2000+2001&amp;crit&#10;eria=any&amp;location=0&amp;category=0&amp;requirephoto=&amp;days=21&amp;session=3bd2727fec9b61ba">3 weeks</a></font>
+the last: <a href="http://www.marineengine.com/cgi-bin/suite/classifieds/classifieds.cgi?&#10;request=advanced_search&amp;website=default&amp;page=0&amp;set=1&amp;keywords=2001+2002&amp;crit&#10;eria=any&amp;location=0&amp;category=0&amp;requirephoto=&amp;days=7&amp;session=3cfe5dc702e248db"> 1 week</a> 
+| <a href="http://www.marineengine.com/cgi-bin/suite/classifieds/classifieds.cgi?request=advanced_search&amp;website=default&amp;page=0&amp;set=1&amp;keywords=2001+2002&amp;criteria=any&amp;location=0&amp;category=0&amp;requirephoto=&amp;days=14&amp;session=3cfe5dc702e248db">2 
+weeks</a> | <a href="http://www.marineengine.com/cgi-bin/suite/classifieds/classifieds.cgi?&#10;request=advanced_search&amp;website=default&amp;page=0&amp;set=1&amp;keywords=2001+2002&amp;crit&#10;eria=any&amp;location=0&amp;category=0&amp;requirephoto=&amp;days=21&amp;session=3cfe5dc702e248db">3 weeks</a></font>
 </td>
 </tr>
 </tbody></table>
 
 
+
+
+
+
+
+
+
+
 	<table width="600" cellpadding="3" cellspacing="0" border="0">
 	<tbody><tr>
 	<td><font face="Arial, Helvetica" size="2">
-	<a href="classifieds.cgi?website=default&amp;session=3bd2727fec9b61ba">Home</a> | <b>Privacy Policy</b>
+	<a href="classifieds.cgi?website=default&amp;session=3cfe5dc702e248db">Home</a> | <b>Privacy Policy</b>
 	</font></td>
 	<td align="right"><font face="Arial, Helvetica" size="2">
 	<b><a href="javascript:history.back()"><b>&lt;&lt; Back</b></a>
@@ -188,28 +196,32 @@ contact you. Generally this information is requested when you create a new user 
 
 
 
+
+
+
+
 <table width="600" cellpadding="3" cellspacing="1" border="0">
 <tbody><tr>
 <td bgcolor="#000099" width="13%" onmouseover="mOvr(this,'#800080');" onmouseout="mOut(this,'#000099');"><font face="Arial, Helvetica" size="2"><b><center>
-<a style="color: #FFFFFF; text-decoration: none" href="http://www.marineengine.com/cgi-bin/suite/classifieds/classifieds.cgi?request=new&amp;session=3bd2727fec9b61ba"><font color="white">post ad</font></a>
+<a style="color: #FFFFFF; text-decoration: none" href="http://www.marineengine.com/cgi-bin/suite/classifieds/classifieds.cgi?request=new&amp;session=3cfe5dc702e248db"><font color="white">post ad</font></a>
 </center></b></font></td>
 <td bgcolor="#000099" width="20%" onmouseover="mOvr(this,'#800080');" onmouseout="mOut(this,'#000099');"><font face="Arial, Helvetica" size="2"><b><center>
-<a style="color: #FFFFFF; text-decoration: none" href="http://www.marineengine.com/cgi-bin/suite/classifieds/classifieds.cgi?request=ad_maintenance&amp;session=3bd2727fec9b61ba"><font color="White">ad maintenance</font></a><font color="White">
+<a style="color: #FFFFFF; text-decoration: none" href="http://www.marineengine.com/cgi-bin/suite/classifieds/classifieds.cgi?request=ad_maintenance&amp;session=3cfe5dc702e248db"><font color="White">ad maintenance</font></a><font color="White">
 </font></center></b></font></td>
 <td bgcolor="#000099" width="15%" onmouseover="mOvr(this,'#800080');" onmouseout="mOut(this,'#000099');"><font face="Arial, Helvetica" size="2"><b><center>
-<a style="color: #FFFFFF; text-decoration: none" href="http://www.marineengine.com/cgi-bin/suite/classifieds/classifieds.cgi?request=modify_profile&amp;session=3bd2727fec9b61ba"><font color="white">my profile</font></a>
+<a style="color: #FFFFFF; text-decoration: none" href="http://www.marineengine.com/cgi-bin/suite/classifieds/classifieds.cgi?request=modify_profile&amp;session=3cfe5dc702e248db"><font color="white">my profile</font></a>
 </center></b></font></td>
 <td bgcolor="#000099" width="17%" onmouseover="mOvr(this,'#800080');" onmouseout="mOut(this,'#000099');"><font face="Arial, Helvetica" size="2"><b><center>
-<a style="color: #FFFFFF; text-decoration: none" href="http://www.marineengine.com/cgi-bin/suite/classifieds/classifieds.cgi?request=view_quicklinks&amp;session=3bd2727fec9b61ba"><font color="white">my quicklinks</font></a>
+<a style="color: #FFFFFF; text-decoration: none" href="http://www.marineengine.com/cgi-bin/suite/classifieds/classifieds.cgi?request=view_quicklinks&amp;session=3cfe5dc702e248db"><font color="white">my quicklinks</font></a>
 </center></b></font></td>
 <td bgcolor="#000099" width="15%" onmouseover="mOvr(this,'#800080');" onmouseout="mOut(this,'#000099');"><font face="Arial, Helvetica" size="2"><b><center>
-<a style="color: #FFFFFF; text-decoration: none" href="http://www.marineengine.com/cgi-bin/suite/classifieds/classifieds.cgi?request=display_my_autonotify&amp;session=3bd2727fec9b61ba"><font color="white">auto notify</font></a>
+<a style="color: #FFFFFF; text-decoration: none" href="http://www.marineengine.com/cgi-bin/suite/classifieds/classifieds.cgi?request=display_my_autonotify&amp;session=3cfe5dc702e248db"><font color="white">auto notify</font></a>
 </center></b></font></td>
 <td bgcolor="#000099" width="10%" onmouseover="mOvr(this,'#800080');" onmouseout="mOut(this,'#000099');"><font face="Arial, Helvetica" size="2"><b><center>
-<a style="color: #FFFFFF; text-decoration: none" href="http://www.marineengine.com/cgi-bin/suite/classifieds/classifieds.cgi?request=help&amp;session=3bd2727fec9b61ba"><font color="white">help</font></a>
+<a style="color: #FFFFFF; text-decoration: none" href="http://www.marineengine.com/cgi-bin/suite/classifieds/classifieds.cgi?request=help&amp;session=3cfe5dc702e248db"><font color="white">help</font></a>
 </center></b></font></td>
 <td bgcolor="#000099" width="10%" onmouseover="mOvr(this,'#800080');" onmouseout="mOut(this,'#000099');"><font face="Arial, Helvetica" size="2"><b><center>
-<a style="color: #FFFFFF; text-decoration: none" href="http://www.marineengine.com/cgi-bin/suite/classifieds/classifieds.cgi?action=&amp;session=3bd2727fec9b61ba"><font color="white">main</font></a>
+<a style="color: #FFFFFF; text-decoration: none" href="http://www.marineengine.com/cgi-bin/suite/classifieds/classifieds.cgi?action=&amp;session=3cfe5dc702e248db"><font color="white">main</font></a>
 </center></b></font></td>
 </tr>
 </tbody></table>
@@ -222,8 +234,7 @@ contact you. Generally this information is requested when you create a new user 
 
 <div align="center"> 
   <p><font face="Arial" size="2"> <a class="menulink" href="/index.shtml">Home</a> 
-    | <a class="menulink" href="/cgi-bin/suite/classifieds/classifieds.cgi">Free 
-    Classified</a> | <a class="menulink" href="/discus/">Message Board</a> | <a class="menulink" href="mailto:info@marineengine.com">Contact 
+    | <a class="menulink" href="/cgi-bin/suite/classifieds/classifieds.cgi">Classified</a> | <a class="menulink" href="/discus/">Message Board</a> | <a class="menulink" href="mailto:info@marineengine.com">Contact 
     Us</a><br>
     <br>
     Directory: <a class="menulink" href="/index.shtml">Main</a> | 
@@ -239,15 +250,23 @@ contact you. Generally this information is requested when you create a new user 
     <a class="menulink" href="/features.html">Features</a></font><br>
   </p>
 </div>
-<p align="center"><font face="Arial" size="1">Copyright © 2000 - 2001 by MarineEngine.com. All rights reserved.<br>
-  MarineEngine.com, 149 Merion Avenue, Haddonfield, NJ 08033-1410  USA<br>
-  email us at <a href="mailto:info@marineengine.com">info@marineengine.com</a> or phone (856)428-7357<br>
-  <a href="http://www.marineengine.com/cgi-bin/suite/classifieds/classifieds.cgi?request=terms&amp;session=3bd2727fec9b61ba">Terms of Use | </a>  <a href="http://www.marineengine.com/cgi-bin/suite/classifieds/classifieds.cgi?request=privacy&amp;session=3bd2727fec9b61ba">Privacy Statement</a></font><br>
+<p align="center"><font face="Arial" size="1">Copyright © 2000 - 2002 by MarineEngine.com. All rights reserved.<br>
+  MarineEngine.com, PO Box 188, Forest Dale, VT 05745-0188  USA<br>
+  email us at <a href="mailto:info@marineengine.com">info@marineengine.com</a> or phone (802) 247-4864<br>
+  <a href="http://www.marineengine.com/cgi-bin/suite/classifieds/classifieds.cgi?request=terms&amp;session=3cfe5dc702e248db">Terms of Use | </a>  <a href="http://www.marineengine.com/cgi-bin/suite/classifieds/classifieds.cgi?request=privacy&amp;session=3cfe5dc702e248db">Privacy Statement</a></font><br>
   </p>
 
 </font></td>
 </tr>
 </tbody></table>
+
+
+
+
+
+
+
+
 
 
 
